--- a/content/events/bmmt-2023.md
+++ b/content/events/bmmt-2023.md
@@ -2,3 +2,257 @@
 title = "BmMT 2023"
 date = 2023-04-15
 +++
+
+Welcome to Berkeley mini Math Tournament 2023! BmMT 2023 will be **in-person**,
+with various **satellite tournaments**. The tournament will consist of 4 main
+rounds — Puzzle, Individual, Team, and Relay.
+
+BmMT is open to middle school students in **grades 8 or below**. In particular,
+there is **no lower age limit** to compete in BmMT; advanced elementary students
+are welcome to compete. Coaches can register **up to 5 students per team**.
+There are no restrictions on how many teams/students a single coach can
+register. You do not have to be local to the Bay Area or California to register
+for BmMT.
+
+# Registration Information
+
+## Registration, Waivers, and Pricing
+
+| Dates       | Registration Period | Price Per Student                              |
+| ----------- | ------------------- | ---------------------------------------------- |
+| 2/28 – 3/20 | Normal Registration | $20                                            |
+| 3/21 – 4/12 | Late Registration   | $30 and there is no guarantee of contest swag. |
+
+**For students facing financial hardship, please contact
+finance@bmt.berkeley.edu for a fee waiver.** As long as students register during
+normal registration, they will receive BmMT shirts and swag as well as T-shirts
+and other company giveaways from our sponsors. We will not honor refunds during
+late registration.
+
+We are now using a new registration portal. Coaches may register up to 5 people
+per team, and ContestDojo will allow them to assign and modify teams up until
+tournament day. **All contestants are required to have their parent/guardian
+sign UC Berkeley’s consent waivers through this portal. Contestants will NOT be
+allowed to take the contest without having a signed liability and consent to
+treatment waiver.** Any questions about managing the teams on the portal should
+be directed to us at questions@bmt.berkeley.edu.
+
+## Student Eligibility
+
+- Students must be in **grade 8 or below** to be eligible for BmMT.
+- Students do not have to be local to the California Bay Area or the U.S. to
+  participate in BmMT. Please see “Satellites” for other options on tournaments.
+- Coaches may register multiple teams. We ask that **for every 2 teams, there is
+  at least 1 parent chaperone**.
+- **Due to room constraints, we will cut-off registration at 600 students on a
+  first-come, first-serve basis.**
+
+## Team Finder
+
+Students may register as a team of 1, however, it is beneficial to compete on a
+team of at least 3 due to our scoring guidelines. For students who do not have a
+full team, we organized a ["Team Finder" document](team-finder). Follow all
+outlined steps in the document.
+
+# BmMT Rounds
+
+### Puzzle Round (75 mins)
+
+The puzzle round is a team-based round that consists of a variety of
+mathematical challenges designed to promote inductive reasoning and lateral
+thinking.
+
+### Individual Round (60 mins)
+
+The individual round consists of 20 short answer questions spanning various
+subjects typically found in math competitions. This includes, but is not limited
+to, algebra, geometry, counting, probability, and number theory.
+
+### Team Round (60 mins)
+
+The team round consists of 20 short answer questions. Students may work with
+their teams on these questions.
+
+### Relay Round (40 mins)
+
+The relay round consists of 20 problems across various subjects in math. The key
+feature of this round is that some questions may depend on answers from one or
+multiple prior questions.
+
+## Tiebreakers
+
+The tiebreakers will be held for the top scoring students in the individual
+round. Tiebreaker qualifiers will be announced at the end of the Relay Round,
+and will be a 15-minute test. The test will consist of three questions, and be
+scored primarily on correctness and secondarily on submission time; that is, an
+earlier submission will be worth more than a later one with the same number of
+correct answers, but less than a later one with more correct answers.
+
+## Summary
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Puzzle</th>
+            <th>Individual</th>
+            <th>Team</th>
+            <th>Relay</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Important Details</td>
+            <td>Logic Puzzle based</td>
+            <td>N/A</td>
+            <td>N/A</td>
+            <td>Questions may rely on answers to other questions</td>
+        </tr>
+        <tr>
+            <th>Location</td>
+            <td style="text-align: center" colspan="4">
+                Assigned Classrooms — See Tournament Guide
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th># of Questions</td>
+            <td>TBA</td>
+            <td>20</td>
+            <td>20</td>
+            <td>20</td>
+        </tr>
+        <tr>
+            <th>Duration</td>
+            <td>75 mins</td>
+            <td>60 mins</td>
+            <td>60 mins</td>
+            <td>40 mins</td>
+        </tr>
+        <tr>
+            <th>% of Score</td>
+            <td>20%</td>
+            <td>40%</td>
+            <td>30%</td>
+            <td>10%</td>
+        </tr>
+        <tr>
+            <th>Important Scoring Notes</td>
+            <td>N/A</td>
+            <td>If teams have less than 3 members, the remaining scores will be counted as 0</td>
+            <td>N/A</td>
+            <td>N/A</td>
+        </tr>
+        <tr>
+            <th>Collaboration?</td>
+            <td>Yes</td>
+            <td>No, students will work individually</td>
+            <td>Yes</td>
+            <td>Yes</td>
+        </tr>
+    </tbody>
+</table>
+
+## Acceptable Answers
+
+Students are responsible for familiarizing themselves with the
+[acceptable test formatting document](/answer-formats.pdf) and
+[common notation document](/answer-formats.pdf) for details on how their answers
+should be submitted. Answers not submitted in the listed formats will be graded
+as incorrect, even if equivalent.
+
+## Scoring
+
+To calculate the individual score, we will take the average of every team
+member’s score on their individual portion if the team has 4, 5, or 6 members.
+If the team has fewer than that many members, we will add 0’s until the team has
+reached at least 4 scores, of which we will take the average.
+
+While individuals are allowed to register a 1-person team, we highly encourage
+students without a team to use the [Team-Finder](team-finder) to create a team
+of at least 4.
+
+Scores for a given round will be normalized by either the top 10 scores or the
+top 10% score, whichever is greater.
+
+If a student takes the General Round instead of the two Focus rounds, their
+score will only count for half as many points as the Focus combination will.
+
+# Schedule
+
+| Time     | Student Event                   |
+| -------- | ------------------------------- |
+| 8:00 AM  | Check-In                        |
+| 9:00 AM  | Puzzle Round + Individual Round |
+| 12:00 PM | Lunch                           |
+| 1:15 PM  | Team Round + Relay Round        |
+| 3:30 PM  | Activities                      |
+| 5:00 PM  | Awards                          |
+
+## Student Activities
+
+Student activities will be updated here soon!
+
+## Parent Activities
+
+Parent activities will be updated here soon!
+
+# Day of Logistics
+
+## Room Assignments
+
+BMT will give out room assignments to teams where they will take every test
+during the day. Classroom assignments will be posted closer to the competition
+date.
+
+# Frequently Asked Questions
+
+### Are calculators or other reference material allowed?
+
+Graph paper and calculators are prohibited, but protractors, rulers, and
+compasses are permitted. Blank white scratch paper will be provided for all
+participants. All answers must be exact, reduced, and simplified. Illegible
+answers will not be graded. Cheating in any form will not be tolerated, and
+failure to comply with all rules may result in immediate and irreversible
+disqualification.
+
+### Can middle school students compete? What if I don’t have a team?
+
+Yes! BmMT is open to any student in 8th grade or below, including those who
+haven’t entered high school. While students are allowed to compete as
+individuals under “LAST_NAME Homeschool” or some other variation, we highly
+recommend that students compete on a team of at least 3 due to our scoring
+guidelines. To calculate the overall Individual score, we will take the average
+of every team member’s score on their individual portion if the team has 3, 4,
+or 5 members. If the team has less than that many members, we will add 0’s until
+the team has reached at least 3 scores, of which we will take the average.
+
+### How are awards handled?
+
+Awards will be physically presented to contestants at BmMT 2023’s closing
+ceremony.
+
+### I’m in a different timezone or non-local and can’t compete live. What are my options?
+
+There will be BMT Satellite competitions held through our partners across the
+globe for competitors wishing to compete in a different time zone.
+
+### Will lunch be provided?
+
+Lunch is **not provided** for BmMT 2023. Students, coaches and parents are free
+to find food in Berkeley. Restaurants can be found on the south side of campus
+(~5 minute walk from homerooms) and downtown (~15 minute walk from home rooms)
+
+### Where can I find parking / How can I get around Berkeley?
+
+BmMT will not be providing parking or travel arrangements for students — it is
+up to coaches and/or parents to handle travel logistics. There are a number of
+parking garages around the campus, including Underhill Structure, Lower Hearst
+Structure, and the RSF garage. In addition, UC Berkeley campus is very public
+transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
+directly to campus, and the Downtown Berkeley BART station is next to campus
+
+[team-finder]:
+  https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing
