refactor file structure

--- a/content/events/bmmt-2023.md
+++ b/content/events/bmmt-2023.md
@@ -158,10 +158,10 @@ correct answers, but less than a later one with more correct answers.
 ## Acceptable Answers
 
 Students are responsible for familiarizing themselves with the
-[acceptable test formatting document](/answer-formats.pdf) and
-[common notation document](/answer-formats.pdf) for details on how their answers
-should be submitted. Answers not submitted in the listed formats will be graded
-as incorrect, even if equivalent.
+[acceptable test formatting document](/assets/answer-formats.pdf) and
+[common notation document](/assets/answer-formats.pdf) for details on how their
+answers should be submitted. Answers not submitted in the listed formats will be
+graded as incorrect, even if equivalent.
 
 ## Scoring
 
