update for BMT 2023

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -2,3 +2,266 @@
 title = "Berkeley Math Tournament 2023"
 date = 2023-11-04
 +++
+
+Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**,
+with various **satellite tournaments**. The tournament will consist of 3 main
+rounds — Power, Focus/General, and Guts.
+
+BMT is open to middle school students in **grades 12 or below**. In particular,
+there is **no lower age limit** to compete in BMT; advanced middle school students
+are welcome to compete. Coaches can register **up to 6 students per team**.
+There are no restrictions on how many teams/students a single coach can
+register. You do not have to be local to the Bay Area or California to register
+for BMT.
+
+# Registration Information
+
+## Registration, Waivers, and Pricing
+
+| Dates        | Registration Period | Price Per Student                              | Additional Notes                                               |
+| ------------ | ------------------- | ---------------------------------------------- | ----------------                                               |
+| 10/2 – 10/14 | Normal Registration | $20                                            | Shirts may be ordered for $8 per student.                      |
+| 3/21 – 4/12  | Late Registration   | $30 and there is no guarantee of contest swag. | Shirts are not guaranteed, but may be purchased day-of for $10 |
+
+**For students facing financial hardship, please contact
+finance@bmt.berkeley.edu for a fee waiver. We will not honor refunds during
+late registration.
+
+We are now using a new registration portal. Coaches may register up to 6 people
+per team, and ContestDojo will allow them to assign and modify teams up until
+tournament day. **All contestants are required to have their parent/guardian
+sign UC Berkeley’s consent waivers through this portal. Contestants will NOT be
+allowed to take the contest without having a signed liability and consent to
+treatment waiver.** Any questions about managing the teams on the portal should
+be directed to us at questions@bmt.berkeley.edu.
+
+## Student Eligibility
+
+- Students must be in **grade 12 or below** to be eligible for BMT.
+- Students do not have to be local to the California Bay Area or the U.S. to
+  participate in BMT. Please see “Satellites” for other options on tournaments.
+- Coaches may register multiple teams. We ask that **for every 2 teams, there is
+  at least 1 parent chaperone**.
+- **Due to room constraints, we will cut-off registration at 700 students on a
+  first-come, first-serve basis.**
+
+## Team Finder
+
+Students may register as a team of 1, however, it is beneficial to compete on a
+team of at least 4 due to our scoring guidelines. For students who do not have a
+full team, we organized a ["Team Finder" document](team-finder). Follow all
+outlined steps in the document.
+
+# BMT Rounds
+
+### Power Round (90 mins)
+
+The Power Round is a **proof-based team round.** Contestants will answer a series 
+of questions centered around a single topic not typically seen in competitive 
+mathematics, culminating in incredible results in the field of that chosen topic. 
+For all questions (unless stated otherwise), you will need to provide a 
+rigorous mathematical justification for your assertions in full sentences. The 
+topic for the Power Round will likely be at an undergraduate level, but no 
+substantial previous mathematical background is expected. 
+
+### General Round (90 mins)
+
+The general round is an **individual round** consisting of questions across 
+the various subjects that comprise the focus rounds. This round is **highly 
+recommended** for students with less prior contest experience.*
+
+### Focus Rounds (60 mins)
+
+There are four focus rounds of 10 questions across four subjects --- Algebra, 
+Geometry, Discrete Math, and Calculus. Each student can participate in 
+**two rounds** of focus exams.*
+
+### Guts Round (75 mins)
+
+The guts round consists of **9 sets of 3 problems** across various subjects in math.
+The key feature of this round is that each set **must be turned in** before the next 
+set is given. All teams can see a live scoreboard with their standings
+
+## Tiebreakers
+
+The tiebreakers will be held for the top scoring students in the individual
+round. Tiebreaker qualifiers will be announced at the end of the Relay Round,
+and will be a 15-minute test. The test will consist of three questions, and be
+scored primarily on correctness and secondarily on submission time; that is, an
+earlier submission will be worth more than a later one with the same number of
+correct answers, but less than a later one with more correct answers.
+
+*Students may choose to **either** take the General Round **or** two Focus Rounds. 
+
+## Summary
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+            <th>Power</th>
+            <th>General</th>
+            <th>Focus</th>
+            <th>Guts</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>Important Details</td>
+            <td>Proof Based</td>
+            <td style="text-align: center" colspan="2">
+				Students may take **either** the General Round or two Focus Rounds
+            </td>
+            <td>Live scored, and questions are submitted in groups of 3</td>
+        </tr>
+        <tr>
+            <th>Location</td>
+            <td style="text-align: center" colspan="4">
+                Assigned Classrooms — See Tournament Guide
+            </td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <th># of Questions</td>
+            <td>TBA</td>
+            <td>25</td>
+            <td>10</td>
+            <td>27</td>
+        </tr>
+        <tr>
+            <th>Duration</td>
+            <td>90 mins</td>
+            <td>90 mins</td>
+            <td>60 mins</td>
+            <td>75 mins</td>
+        </tr>
+        <tr>
+            <th>% of Score</td>
+            <td>20%</td>
+            <td>40%</td>
+            <td>30%</td>
+            <td>10%</td>
+        </tr>
+        <tr>
+            <th>Important Scoring Notes</td>
+            <td>N/A</td>
+            <td style="text-align: center" colspan="2">
+            If teams have less than 4 members, the remaining scores will be counted as 0. The General Round will only count for half as many points as the Focus combinations
+            </td>
+            <td>Teams are live scored, and there will be a displayed scoreboard</td>
+        </tr>
+        <tr>
+            <th>Collaboration?</td>
+            <td>Yes</td>
+            <td>No, students will work individually</td>
+            <td>No, students will work individually</td>
+            <td>Yes</td>
+        </tr>
+    </tbody>
+</table>
+
+## Acceptable Answers
+
+Students are responsible for familiarizing themselves with the
+[acceptable test formatting document](/assets/answer-formats.pdf) and
+[common notation document](/assets/answer-formats.pdf) for details on how their
+answers should be submitted. Answers not submitted in the listed formats will be
+graded as incorrect, even if equivalent.
+
+## Scoring
+
+To calculate the individual score, we will take the average of every team
+member’s score on their individual portion if the team has 4, 5, or 6 members.
+If the team has fewer than that many members, we will add 0’s until the team has
+reached at least 4 scores, of which we will take the average.
+
+While individuals are allowed to register a 1-person team, we highly encourage
+students without a team to use the [Team-Finder](team-finder) to create a team
+of at least 4.
+
+Scores for a given round will be normalized by either the top 10 scores or the
+top 10% score, whichever is greater.
+
+If a student takes the General Round instead of the two Focus rounds, their
+score will only count for half as many points as the Focus combination will.
+
+# Schedule
+
+| Time     | Student Event                   |
+| -------- | ------------------------------- |
+| 8:00 AM  | Check-In                        |
+| 9:00 AM  | Power Round                     |
+| 10:45 AM | Focus + General Rounds          |
+| 1:00 PM  | Lunch                           |
+| 2:15 PM  | Tiebreakers + Activities        |
+| 3:45 PM  | Guts                            |
+| 6:00 PM  | Awards                          |
+
+## Student Activities
+
+Student activities will be updated here soon!
+
+## Parent Activities
+
+Parent activities will be updated here soon!
+
+# Day of Logistics
+
+## Room Assignments
+
+BMT will give out room assignments to teams where they will take every test
+during the day. Classroom assignments will be posted closer to the competition
+date.
+
+# Frequently Asked Questions
+
+### Are calculators or other reference material allowed?
+
+Graph paper and calculators are prohibited, but protractors, rulers, and
+compasses are permitted. Blank white scratch paper will be provided for all
+participants. All answers must be exact, reduced, and simplified. Illegible
+answers will not be graded. Cheating in any form will not be tolerated, and
+failure to comply with all rules may result in immediate and irreversible
+disqualification.
+
+### Can middle school students compete? What if I don’t have a team?
+
+Yes! BMT is open to any student in 8th grade or below, including those who
+haven’t entered high school. While students are allowed to compete as
+individuals under “LAST_NAME Homeschool” or some other variation, we highly
+recommend that students compete on a team of at least 4 due to our scoring
+guidelines. To calculate the overall Individual score, we will take the average
+of every team member’s score on their individual portion if the team has 4, 5,
+or 6 members. If the team has less than that many members, we will add 0’s until
+the team has reached at least 4 scores, of which we will take the average.
+
+### How are awards handled?
+
+Awards will be physically presented to contestants at BMT 2023’s closing
+ceremony.
+
+### I’m in a different timezone or non-local and can’t compete live. What are my options?
+
+There will be BMT Satellite competitions held through our partners across the
+globe for competitors wishing to compete in a different time zone.
+
+### Will lunch be provided?
+
+Lunch is **not provided** for BMT 2023. Students, coaches and parents are free
+to find food in Berkeley. Restaurants can be found on the south side of campus
+(~5 minute walk from homerooms) and downtown (~15 minute walk from home rooms)
+
+### Where can I find parking / How can I get around Berkeley?
+
+BMT will not be providing parking or travel arrangements for students — it is
+up to coaches and/or parents to handle travel logistics. There are a number of
+parking garages around the campus, including Underhill Structure, Lower Hearst
+Structure, and the RSF garage. In addition, UC Berkeley campus is very public
+transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
+directly to campus, and the Downtown Berkeley BART station is next to campus
+
+[team-finder]:
+  https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing
+
