changes to date and footnotes

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -18,10 +18,12 @@ for BMT.
 
 ## Registration, Waivers, and Pricing
 
-| Dates        | Registration Period | Price Per Student                              | Additional Notes                                               |
-| ------------ | ------------------- | ---------------------------------------------- | ----------------                                               |
-| 10/2 – 10/14 | Normal Registration | $20                                            | Shirts may be ordered for $8 per student.                      |
-| 3/21 – 4/12  | Late Registration   | $30 and there is no guarantee of contest swag. | Shirts are not guaranteed, but may be purchased day-of for $10 |
+| Dates         | Registration Period | Price Per Student                              | Additional Notes                                               |
+| ------------  | ------------------- | ---------------------------------------------- | ----------------                                               |
+| 10/2 – 10/14  | Normal Registration | $20                                            | Shirts may be ordered for $8 per student.                      |
+| 10/15 – 11/1  | Late Registration   | $30 and there is no guarantee of contest swag. | Shirts are not guaranteed, but may be purchased day-of for $10 |
+
+*All dates are in PT. That is, Normal Registration ends at 11:59 PM PT on 10/14/2023.
 
 **For students facing financial hardship, please contact
 finance@bmt.berkeley.edu for a fee waiver. We will not honor refunds during
@@ -82,6 +84,8 @@ The guts round consists of **9 sets of 3 problems** across various subjects in m
 The key feature of this round is that each set **must be turned in** before the next 
 set is given. All teams can see a live scoreboard with their standings
 
+*Students may choose to **either** take the General Round **or** two Focus Rounds. 
+
 ## Tiebreakers
 
 The tiebreakers will be held for the top scoring students in the individual
@@ -91,7 +95,6 @@ scored primarily on correctness and secondarily on submission time; that is, an
 earlier submission will be worth more than a later one with the same number of
 correct answers, but less than a later one with more correct answers.
 
-*Students may choose to **either** take the General Round **or** two Focus Rounds. 
 
 ## Summary
 
@@ -110,7 +113,7 @@ correct answers, but less than a later one with more correct answers.
             <th>Important Details</td>
             <td>Proof Based</td>
             <td style="text-align: center" colspan="2">
-				Students may take **either** the General Round or two Focus Rounds
+				Students may take <b>either</b> the General Round or two Focus Rounds
             </td>
             <td>Live scored, and questions are submitted in groups of 3</td>
         </tr>
