changes to tiebreaker announcements

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -89,11 +89,11 @@ set is given. All teams can see a live scoreboard with their standings
 ## Tiebreakers
 
 The tiebreakers will be held for the top scoring students in the individual
-round. Tiebreaker qualifiers will be announced at the end of the Relay Round,
-and will be a 15-minute test. The test will consist of three questions, and be
-scored primarily on correctness and secondarily on submission time; that is, an
-earlier submission will be worth more than a later one with the same number of
-correct answers, but less than a later one with more correct answers.
+round. Tiebreaker qualifiers will be announced at the end of lunch and the beginning of 
+activities, and will be a 15-minute test. The test will consist of three questions,
+and be scored primarily on correctness and secondarily on submission time; 
+that is, an earlier submission will be worth more than a later one with the 
+same number of correct answers, but less than a later one with more correct answers.
 
 
 ## Summary
