--- a/content/archives/bmmt-2023.md
+++ b/content/archives/bmmt-2023.md
@@ -1,3 +1,19 @@
 +++
-title = "BmMT 2023 Archives"
+title = "BmMT 2023 Archive"
 +++
+
+
+| Round        |                                                            |                                                             |
+| ------------ | ---------------------------------------------------------- | ----------------------------------------------------------- |
+| Puzzle       | [Test](/assets/archives/bmmt-2023/puzzle-problems.pdf)     | [Test](/assets/archives/bmmt-2023/puzzle-solutions.pdf)     |
+| Individual   | [Test](/assets/archives/bmmt-2023/individual-problems.pdf) | [Test](/assets/archives/bmmt-2023/individual-solutions.pdf) |
+| Team         | [Test](/assets/archives/bmmt-2023/team-problems.pdf)       | [Test](/assets/archives/bmmt-2023/team-solutions.pdf)       |
+| Relay        | [Test](/assets/archives/bmmt-2023/relay-problems.pdf)      | [Test](/assets/archives/bmmt-2023/relay-solutions.pdf)      |
+
+
+
+
+
+
+
+
