update swag blurb

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -19,9 +19,9 @@ for BMT.
 ## Registration, Waivers, and Pricing
 
 | Dates         | Registration Period | Price Per Student                              | Additional Notes                                               |
-| ------------  | ------------------- | ---------------------------------------------- | ----------------                                               |
-| 10/2 – 10/14  | Normal Registration | $20                                            | Shirts may be ordered for $8 per student.                      |
-| 10/15 – 11/1  | Late Registration   | $30 and there is no guarantee of contest swag. | Shirts are not guaranteed, but may be purchased day-of for $10 |
+| ------------  | ------------------- | ---------------------------------------------- | -------------------------------------------------------------- |
+| 10/2 – 10/14  | Normal Registration | $20                                            | Shirts may be pre-ordered for $8 per student.                  |
+| 10/15 – 11/1  | Late Registration   | $30 and shirts may not be pre-ordered.         | Shirts are not guaranteed, but may be purchased day-of for $10 |
 
 *All dates are in PT. That is, Normal Registration ends at 11:59 PM PT on 10/14/2023.
 
