middle -> high school

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -7,7 +7,7 @@ Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**,
 with various **satellite tournaments**. The tournament will consist of 3 main
 rounds — Power, Focus/General, and Guts.
 
-BMT is open to middle school students in **grades 12 or below**. In particular,
+BMT is open to high school students in **grades 12 or below**. In particular,
 there is **no lower age limit** to compete in BMT; advanced middle school students
 are welcome to compete. Coaches can register **up to 6 students per team**.
 There are no restrictions on how many teams/students a single coach can
