--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -3,14 +3,14 @@ title = "Berkeley Math Tournament 2023"
 date = 2023-11-04
 +++
 
-Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**,
-with various **satellite tournaments**. The tournament will consist of 3 main
-rounds — Power, Focus/General, and Guts.
+Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**, with
+various **satellite tournaments**. The tournament will consist of 3 main rounds
+— Power, Focus/General, and Guts.
 
 BMT is open to high school students in **grades 12 or below**. In particular,
-there is **no lower age limit** to compete in BMT; advanced middle school students
-are welcome to compete. Coaches can register **up to 6 students per team**.
-There are no restrictions on how many teams/students a single coach can
+there is **no lower age limit** to compete in BMT; advanced middle school
+students are welcome to compete. Coaches can register **up to 6 students per
+team**. There are no restrictions on how many teams/students a single coach can
 register. You do not have to be local to the Bay Area or California to register
 for BMT.
 
@@ -18,16 +18,17 @@ for BMT.
 
 ## Registration, Waivers, and Pricing
 
-| Dates         | Registration Period | Price Per Student                              | Additional Notes                                               |
-| ------------  | ------------------- | ---------------------------------------------- | -------------------------------------------------------------- |
-| 10/2 – 10/14  | Normal Registration | $20                                            | Shirts may be pre-ordered for $8 per student.                  |
-| 10/15 – 11/1  | Late Registration   | $30 and shirts may not be pre-ordered.         | Shirts are not guaranteed, but may be purchased day-of for $10 |
+| Dates        | Registration Period | Price Per Student | Additional Notes                                               |
+| ------------ | ------------------- | ----------------- | -------------------------------------------------------------- |
+| 10/2 – 10/14 | Normal Registration | $20               | Shirts may be pre-ordered for $8 per student.                  |
+| 10/15 – 11/1 | Late Registration   | $30               | Shirts are not guaranteed, but may be purchased day-of for $10 |
 
-*All dates are in PT. That is, Normal Registration ends at 11:59 PM PT on 10/14/2023.
+\*All dates are in PT. That is, Normal Registration ends at 11:59 PM PT on
+10/14/2023.
 
-**For students facing financial hardship, please contact
-finance@bmt.berkeley.edu for a fee waiver. We will not honor refunds during
-late registration.
+\*\*For students facing financial hardship, please contact
+finance@bmt.berkeley.edu for a fee waiver. We will not honor refunds during late
+registration.
 
 We are now using a new registration portal. Coaches may register up to 6 people
 per team, and ContestDojo will allow them to assign and modify teams up until
@@ -58,43 +59,45 @@ outlined steps in the document.
 
 ### Power Round (90 mins)
 
-The Power Round is a **proof-based team round.** Contestants will answer a series 
-of questions centered around a single topic not typically seen in competitive 
-mathematics, culminating in incredible results in the field of that chosen topic. 
-For all questions (unless stated otherwise), you will need to provide a 
-rigorous mathematical justification for your assertions in full sentences. The 
-topic for the Power Round will likely be at an undergraduate level, but no 
-substantial previous mathematical background is expected. 
+The Power Round is a **proof-based team round.** Contestants will answer a
+series of questions centered around a single topic not typically seen in
+competitive mathematics, culminating in incredible results in the field of that
+chosen topic. For all questions (unless stated otherwise), you will need to
+provide a rigorous mathematical justification for your assertions in full
+sentences. The topic for the Power Round will likely be at an undergraduate
+level, but no substantial previous mathematical background is expected.
 
 ### General Round (90 mins)
 
-The general round is an **individual round** consisting of questions across 
-the various subjects that comprise the focus rounds. This round is **highly 
-recommended** for students with less prior contest experience.*
+The general round is an **individual round** consisting of questions across the
+various subjects that comprise the focus rounds. This round is **highly
+recommended** for students with less prior contest experience.\*
 
 ### Focus Rounds (60 mins)
 
-There are four focus rounds of 10 questions across four subjects --- Algebra, 
-Geometry, Discrete Math, and Calculus. Each student can participate in 
-**two rounds** of focus exams.*
+There are four focus rounds of 10 questions across four subjects --- Algebra,
+Geometry, Discrete Math, and Calculus. Each student can participate in **two
+rounds** of focus exams.\*
 
 ### Guts Round (75 mins)
 
-The guts round consists of **9 sets of 3 problems** across various subjects in math.
-The key feature of this round is that each set **must be turned in** before the next 
-set is given. All teams can see a live scoreboard with their standings
+The guts round consists of **9 sets of 3 problems** across various subjects in
+math. The key feature of this round is that each set **must be turned in**
+before the next set is given. All teams can see a live scoreboard with their
+standings
 
-*Students may choose to **either** take the General Round **or** two Focus Rounds. 
+\*Students may choose to **either** take the General Round **or** two Focus
+Rounds.
 
 ## Tiebreakers
 
 The tiebreakers will be held for the top scoring students in the individual
-round. Tiebreaker qualifiers will be announced at the end of lunch and the beginning of 
-activities, and will be a 15-minute test. The test will consist of three questions,
-and be scored primarily on correctness and secondarily on submission time; 
-that is, an earlier submission will be worth more than a later one with the 
-same number of correct answers, but less than a later one with more correct answers.
-
+round. Tiebreaker qualifiers will be announced at the end of lunch and the
+beginning of activities, and will be a 15-minute test. The test will consist of
+three questions, and be scored primarily on correctness and secondarily on
+submission time; that is, an earlier submission will be worth more than a later
+one with the same number of correct answers, but less than a later one with more
+correct answers.
 
 ## Summary
 
@@ -102,10 +105,10 @@ same number of correct answers, but less than a later one with more correct answ
     <thead>
         <tr>
             <th></th>
-            <th>Power</th>
-            <th>General</th>
-            <th>Focus</th>
-            <th>Guts</th>
+            <th style="text-align: center">Power</th>
+            <th style="text-align: center">General</th>
+            <th style="text-align: center">Focus</th>
+            <th style="text-align: center">Guts</th>
         </tr>
     </thead>
     <tbody>
@@ -113,9 +116,9 @@ same number of correct answers, but less than a later one with more correct answ
             <th>Important Details</td>
             <td>Proof Based</td>
             <td style="text-align: center" colspan="2">
-				Students may take <b>either</b> the General Round or two Focus Rounds
+				Students may choose to participate in <strong>either</strong> the General Round or <strong>two</strong> separate Focus Rounds, but not both
             </td>
-            <td>Live scored, and questions are submitted in groups of 3</td>
+            <td>Submitted and scored live in sets of 3</td>
         </tr>
         <tr>
             <th>Location</td>
@@ -192,15 +195,15 @@ score will only count for half as many points as the Focus combination will.
 
 # Schedule
 
-| Time     | Student Event                   |
-| -------- | ------------------------------- |
-| 8:00 AM  | Check-In                        |
-| 9:00 AM  | Power Round                     |
-| 10:45 AM | Focus + General Rounds          |
-| 1:00 PM  | Lunch                           |
-| 2:15 PM  | Tiebreakers + Activities        |
-| 3:45 PM  | Guts                            |
-| 6:00 PM  | Awards                          |
+| Time     | Student Event            |
+| -------- | ------------------------ |
+| 8:00 AM  | Check-In                 |
+| 9:00 AM  | Power Round              |
+| 10:45 AM | Focus + General Rounds   |
+| 1:00 PM  | Lunch                    |
+| 2:15 PM  | Tiebreakers + Activities |
+| 3:45 PM  | Guts                     |
+| 6:00 PM  | Awards                   |
 
 ## Student Activities
 
@@ -258,8 +261,8 @@ to find food in Berkeley. Restaurants can be found on the south side of campus
 
 ### Where can I find parking / How can I get around Berkeley?
 
-BMT will not be providing parking or travel arrangements for students — it is
-up to coaches and/or parents to handle travel logistics. There are a number of
+BMT will not be providing parking or travel arrangements for students — it is up
+to coaches and/or parents to handle travel logistics. There are a number of
 parking garages around the campus, including Underhill Structure, Lower Hearst
 Structure, and the RSF garage. In addition, UC Berkeley campus is very public
 transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
@@ -267,4 +270,3 @@ directly to campus, and the Downtown Berkeley BART station is next to campus
 
 [team-finder]:
   https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing
-
