add link to bmt 2023 page on announcement

--- a/content/news/2023-08-21_bmt-2023-date-set.md
+++ b/content/news/2023-08-21_bmt-2023-date-set.md
@@ -2,6 +2,9 @@
 title = "BMT is on November 4th, 2023!"
 +++
 
+**_Update (10/2/2023): We've released registration details on the
+[BMT 2023](/events/bmt-2023) page!_**
+
 We are excited to announce that this year’s Berkeley Math Tournament (BMT) will
 be on November 4, 2023 in person at UC Berkeley!
 
@@ -14,5 +17,5 @@ mathematical endeavors.
 For those curious about the problem style, past contests can be found in our
 [archive](https://bmt.berkeley.edu/archive/).
 
-Registration will open soon! To stay informed, keep an eye out for our
-newsletters and follow us on our social media!
+Registration will open soon! To stay informed, keep an eye out for newsletters
+and follow us on social media!
