--- a/content/archives/bmmt-2023.md
+++ b/content/archives/bmmt-2023.md
@@ -4,12 +4,12 @@ title = "BmMT 2023 Archive"
 
 | Round        |                                                            |                                                                  |
 | ------------ | ---------------------------------------------------------- | ---------------------------------------------------------------- |
-| Puzzle       | [Test](/assets/archives/bmmt-2023/puzzle-problems.pdf)     | [Solutions](/assets/archives/bmmt-2023/puzzle-solutions.pdf)     |
-| Individual   | [Test](/assets/archives/bmmt-2023/individual-problems.pdf) | [Solutions](/assets/archives/bmmt-2023/individual-solutions.pdf) |
-| Team         | [Test](/assets/archives/bmmt-2023/team-problems.pdf)       | [Solutions](/assets/archives/bmmt-2023/team-solutions.pdf)       |
-| Relay        | [Test](/assets/archives/bmmt-2023/relay-problems.pdf)      | [Solutions](/assets/archives/bmmt-2023/relay-solutions.pdf)      |
+| Puzzle       | [pdf](/assets/archives/bmmt-2023/puzzle-problems.pdf)     | [pdf](/assets/archives/bmmt-2023/puzzle-solutions.pdf)     |
+| Individual   | [pdf](/assets/archives/bmmt-2023/individual-problems.pdf) | [pdf](/assets/archives/bmmt-2023/individual-solutions.pdf) |
+| Team         | [pdf](/assets/archives/bmmt-2023/team-problems.pdf)       | [pdf](/assets/archives/bmmt-2023/team-solutions.pdf)       |
+| Relay        | [pdf](/assets/archives/bmmt-2023/relay-problems.pdf)      | [pdf](/assets/archives/bmmt-2023/relay-solutions.pdf)      |
 
-**Results:** [Results](/assets/archives/bmmt-2023/resultsCondensed.pdf)
+**Results:** [pdf](/assets/archives/bmmt-2023/resultsCondensed.pdf)
 
 
 
