update links + remove registration for bmmt

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -172,7 +172,7 @@ correct answers.
 
 Students are responsible for familiarizing themselves with the
 [acceptable test formatting document](/assets/answer-formats.pdf) and
-[common notation document](/assets/answer-formats.pdf) for details on how their
+[common notation document](/assets/common-notions.pdf) for details on how their
 answers should be submitted. Answers not submitted in the listed formats will be
 graded as incorrect, even if equivalent.
 
@@ -184,7 +184,7 @@ If the team has fewer than that many members, we will add 0’s until the team h
 reached at least 4 scores, of which we will take the average.
 
 While individuals are allowed to register a 1-person team, we highly encourage
-students without a team to use the [Team-Finder](team-finder) to create a team
+students without a team to use the [Team-Finder](https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing) to create a team
 of at least 4.
 
 Scores for a given round will be normalized by either the top 10 scores or the
@@ -268,5 +268,4 @@ Structure, and the RSF garage. In addition, UC Berkeley campus is very public
 transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
 directly to campus, and the Downtown Berkeley BART station is next to campus
 
-[team-finder]:
-  https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing
+<!--[team-finder]:-->
