--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -145,10 +145,9 @@ correct answers.
         </tr>
         <tr>
             <th>% of Score</td>
-            <td>20%</td>
-            <td>40%</td>
             <td>30%</td>
-            <td>10%</td>
+            <td style="text-align: center" colspan="2">40%</td>
+            <td>30%</td>
         </tr>
         <tr>
             <th>Important Scoring Notes</td>
@@ -184,8 +183,9 @@ If the team has fewer than that many members, we will add 0’s until the team h
 reached at least 4 scores, of which we will take the average.
 
 While individuals are allowed to register a 1-person team, we highly encourage
-students without a team to use the [Team-Finder](https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing) to create a team
-of at least 4.
+students without a team to use the
+[Team-Finder](https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing)
+to create a team of at least 4.
 
 Scores for a given round will be normalized by either the top 10 scores or the
 top 10% score, whichever is greater.
