--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -171,7 +171,7 @@ correct answers.
 
 Students are responsible for familiarizing themselves with the
 [acceptable test formatting document](/assets/answer-formats.pdf) and
-[common notation document](/assets/common-notions.pdf) for details on how their
+[common notions document](/assets/common-notions.pdf) for details on how their
 answers should be submitted. Answers not submitted in the listed formats will be
 graded as incorrect, even if equivalent.
 
