open registration for bmt 2023

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -27,16 +27,22 @@ for BMT.
 10/14/2023.
 
 \*\*For students facing financial hardship, please contact
-finance@bmt.berkeley.edu for a fee waiver. We will not honor refunds during late
-registration.
+<finance@bmt.berkeley.edu> for a fee waiver. We will not honor refunds during
+late registration.
 
-We are now using a new registration portal. Coaches may register up to 6 people
+Registration is performed on ContestDojo. Coaches may register up to 6 people
 per team, and ContestDojo will allow them to assign and modify teams up until
-tournament day. **All contestants are required to have their parent/guardian
-sign UC Berkeley’s consent waivers through this portal. Contestants will NOT be
-allowed to take the contest without having a signed liability and consent to
-treatment waiver.** Any questions about managing the teams on the portal should
-be directed to us at questions@bmt.berkeley.edu.
+tournament day.
+
+**All contestants are required to have their parent/guardian sign UC Berkeley’s
+consent waivers through this portal. Contestants will NOT be allowed to take the
+contest without having a signed liability and consent to treatment waiver.**
+
+Any questions about the ContestDojo portal should be directed to us at
+<questions@bmt.berkeley.edu>.
+
+{% button_link(href="https://contestdojo.com/") %} Register on ContestDojo
+{% end %}
 
 ## Student Eligibility
 
