fix team-finder doc

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -58,8 +58,8 @@ Any questions about the ContestDojo portal should be directed to us at
 
 Students may register as a team of 1, however, it is beneficial to compete on a
 team of at least 4 due to our scoring guidelines. For students who do not have a
-full team, we organized a ["Team Finder" document](team-finder). Follow all
-outlined steps in the document.
+full team, we organized a [Team-Finder] document. Follow all outlined steps in
+the document.
 
 # BMT Rounds
 
@@ -189,9 +189,7 @@ If the team has fewer than that many members, we will add 0’s until the team h
 reached at least 4 scores, of which we will take the average.
 
 While individuals are allowed to register a 1-person team, we highly encourage
-students without a team to use the
-[Team-Finder](https://docs.google.com/spreadsheets/d/1AzZzoYhZA-4kTjdgU2qXsJdk9Q-xzeqMdswaHOYE9TQ/edit?usp=sharing)
-to create a team of at least 4.
+students without a team to use the [Team-Finder] to create a team of at least 4.
 
 Scores for a given round will be normalized by either the top 10 scores or the
 top 10% score, whichever is greater.
@@ -274,4 +272,5 @@ Structure, and the RSF garage. In addition, UC Berkeley campus is very public
 transport friendly. If you are staying in Emeryville, Bus Line 36 will take you
 directly to campus, and the Downtown Berkeley BART station is next to campus
 
-<!--[team-finder]:-->
+[Team-Finder]:
+  https://docs.google.com/spreadsheets/d/1i1RW4OTW8qP2Sb2GZd2gGTuP8Rusd-8bv-gJiRrODhI/edit?usp=sharing
