--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -41,8 +41,7 @@ contest without having a signed liability and consent to treatment waiver.**
 Any questions about the ContestDojo portal should be directed to us at
 <questions@bmt.berkeley.edu>.
 
-{% button_link(href="https://contestdojo.com/") %} Register on ContestDojo
-{% end %}
+Note: We've hit our 700 student cap, and registration is now closed for BMT 2023. 
 
 ## Student Eligibility
 
