--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -16,6 +16,8 @@ for BMT.
 
 # Registration Information
 
+## Registration is now closed for BMT 2023.
+
 ## Registration, Waivers, and Pricing
 
 | Dates        | Registration Period | Price Per Student | Additional Notes                                               |
@@ -40,8 +42,6 @@ contest without having a signed liability and consent to treatment waiver.**
 
 Any questions about the ContestDojo portal should be directed to us at
 <questions@bmt.berkeley.edu>.
-
-Note: We've hit our 700 student cap, and registration is now closed for BMT 2023. 
 
 ## Student Eligibility
 
