change guts time

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -3,7 +3,8 @@ title = "Berkeley Math Tournament 2023"
 date = 2023-11-04
 +++
 
-{% alert(title="Registration Closed") %} We have hit our cap of 700 registrations, and registration is now closed for BMT 2023. {% end %}
+{% alert(title="Registration Closed") %} We have hit our cap of 700
+registrations, and registration is now closed for BMT 2023. {% end %}
 
 Welcome to Berkeley Math Tournament 2023! BMT 2023 will be **in-person**, with
 various **satellite tournaments**. The tournament will consist of 3 main rounds
@@ -207,7 +208,7 @@ score will only count for half as many points as the Focus combination will.
 | 10:45 AM | Focus + General Rounds   |
 | 1:00 PM  | Lunch                    |
 | 2:15 PM  | Tiebreakers + Activities |
-| 3:45 PM  | Guts                     |
+| 4:00 PM  | Guts                     |
 | 6:00 PM  | Awards                   |
 
 ## Student Activities
