[BMT 2023] Center Details Table

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -121,8 +121,8 @@ correct answers.
     </thead>
     <tbody>
         <tr>
-            <th>Important Details</td>
-            <td>Proof Based</td>
+            <th style="text-align: center">Important Details</td>
+            <td style="text-align: center">Proof Based</td>
             <td style="text-align: center" colspan="2">
 				Students may choose to participate in <strong>either</strong> the General Round or <strong>two</strong> separate Focus Rounds, but not both
             </td>
@@ -139,38 +139,38 @@ correct answers.
         </tr>
         <tr>
             <th># of Questions</td>
-            <td>TBA</td>
-            <td>25</td>
-            <td>10</td>
-            <td>27</td>
+            <td style="text-align: center">TBA</td>
+            <td style="text-align: center">25</td>
+            <td style="text-align: center">10</td>
+            <td style="text-align: center">27</td>
         </tr>
         <tr>
-            <th>Duration</td>
-            <td>90 mins</td>
-            <td>90 mins</td>
-            <td>60 mins</td>
-            <td>75 mins</td>
+            <th style="text-align: center">Duration</td>
+            <td style="text-align: center">90 mins</td>
+            <td style="text-align: center">90 mins</td>
+            <td style="text-align: center">60 mins</td>
+            <td style="text-align: center">75 mins</td>
         </tr>
         <tr>
-            <th>% of Score</td>
-            <td>30%</td>
+            <th style="text-align: center">% of Score</td>
+            <td style="text-align: center">30%</td>
             <td style="text-align: center" colspan="2">40%</td>
-            <td>30%</td>
+            <td style="text-align: center">30%</td>
         </tr>
         <tr>
-            <th>Important Scoring Notes</td>
-            <td>N/A</td>
+            <th style="text-align: center">Important Scoring Notes</td>
+            <td style="text-align: center">N/A</td>
             <td style="text-align: center" colspan="2">
             If teams have less than 4 members, the remaining scores will be counted as 0. The General Round will only count for half as many points as the Focus combinations
             </td>
-            <td>Teams are live scored, and there will be a displayed scoreboard</td>
+            <td style="text-align: center">Teams are live scored, and there will be a displayed scoreboard</td>
         </tr>
         <tr>
-            <th>Collaboration?</td>
-            <td>Yes</td>
-            <td>No, students will work individually</td>
-            <td>No, students will work individually</td>
-            <td>Yes</td>
+            <th style="text-align: center">Collaboration?</td>
+            <td style="text-align: center">Yes</td>
+            <td style="text-align: center">No, students will work individually</td>
+            <td style="text-align: center">No, students will work individually</td>
+            <td style="text-align: center">Yes</td>
         </tr>
     </tbody>
 </table>
