--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -109,68 +109,68 @@ correct answers.
 
 ## Summary
 
-<table>
+<table style = "text-align: center">
     <thead>
         <tr>
             <th></th>
-            <th style="text-align: center">Power</th>
-            <th style="text-align: center">General</th>
-            <th style="text-align: center">Focus</th>
-            <th style="text-align: center">Guts</th>
+            <th>Power</th>
+            <th>General</th>
+            <th>Focus</th>
+            <th>Guts</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <th style="text-align: center">Important Details</td>
-            <td style="text-align: center">Proof Based</td>
-            <td style="text-align: center" colspan="2">
+            <th>Important Details</td>
+            <td>Proof Based</td>
+            <td colspan="2">
 				Students may choose to participate in <strong>either</strong> the General Round or <strong>two</strong> separate Focus Rounds, but not both
             </td>
             <td>Submitted and scored live in sets of 3</td>
         </tr>
         <tr>
             <th>Location</td>
-            <td style="text-align: center" colspan="4">
+            <td colspan="4">
                 Assigned Classrooms — See Tournament Guide
             </td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
-        <tr>
+        <tr style="text-align: center">
             <th># of Questions</td>
-            <td style="text-align: center">TBA</td>
-            <td style="text-align: center">25</td>
-            <td style="text-align: center">10</td>
-            <td style="text-align: center">27</td>
+            <td>TBA</td>
+            <td>25</td>
+            <td>10</td>
+            <td>27</td>
         </tr>
         <tr>
-            <th style="text-align: center">Duration</td>
-            <td style="text-align: center">90 mins</td>
-            <td style="text-align: center">90 mins</td>
-            <td style="text-align: center">60 mins</td>
-            <td style="text-align: center">75 mins</td>
+            <th>Duration</td>
+            <td>90 mins</td>
+            <td>90 mins</td>
+            <td>60 mins</td>
+            <td>75 mins</td>
         </tr>
         <tr>
-            <th style="text-align: center">% of Score</td>
-            <td style="text-align: center">30%</td>
-            <td style="text-align: center" colspan="2">40%</td>
-            <td style="text-align: center">30%</td>
+            <th>% of Score</td>
+            <td>30%</td>
+            <td colspan="2">40%</td>
+            <td>30%</td>
         </tr>
         <tr>
-            <th style="text-align: center">Important Scoring Notes</td>
-            <td style="text-align: center">N/A</td>
-            <td style="text-align: center" colspan="2">
+            <th>Important Scoring Notes</td>
+            <td>N/A</td>
+            <td colspan="2">
             If teams have less than 4 members, the remaining scores will be counted as 0. The General Round will only count for half as many points as the Focus combinations
             </td>
-            <td style="text-align: center">Teams are live scored, and there will be a displayed scoreboard</td>
+            <td>Teams are live scored, and there will be a displayed scoreboard</td>
         </tr>
         <tr>
-            <th style="text-align: center">Collaboration?</td>
-            <td style="text-align: center">Yes</td>
-            <td style="text-align: center">No, students will work individually</td>
-            <td style="text-align: center">No, students will work individually</td>
-            <td style="text-align: center">Yes</td>
+            <th>Collaboration?</td>
+            <td>Yes</td>
+            <td>No, students will work individually</td>
+            <td>No, students will work individually</td>
+            <td>Yes</td>
         </tr>
     </tbody>
 </table>
