add bmt 2023 logistics post

--- a/content/events/bmt-2023.md
+++ b/content/events/bmt-2023.md
@@ -17,9 +17,12 @@ team**. There are no restrictions on how many teams/students a single coach can
 register. You do not have to be local to the Bay Area or California to register
 for BMT.
 
+{% button_link(href="/news/bmt-2023-logistics") %} Day-of Logistics {% end %}
+{% button_link(href="https://contestdojo.com/") %} Registration Portal {% end %}
+
 # Registration Information
 
-## Registration is now closed for BMT 2023.
+Registration is now closed for BMT 2023.
 
 ## Registration, Waivers, and Pricing
 
@@ -199,33 +202,11 @@ top 10% score, whichever is greater.
 If a student takes the General Round instead of the two Focus rounds, their
 score will only count for half as many points as the Focus combination will.
 
-# Schedule
+# Day-of Logistics
 
-| Time     | Student Event            |
-| -------- | ------------------------ |
-| 8:00 AM  | Check-In                 |
-| 9:00 AM  | Power Round              |
-| 10:45 AM | Focus + General Rounds   |
-| 1:00 PM  | Lunch                    |
-| 2:15 PM  | Tiebreakers + Activities |
-| 4:00 PM  | Guts                     |
-| 6:00 PM  | Awards                   |
-
-## Student Activities
-
-Student activities will be updated here soon!
-
-## Parent Activities
-
-Parent activities will be updated here soon!
-
-# Day of Logistics
-
-## Room Assignments
-
-BMT will give out room assignments to teams where they will take every test
-during the day. Classroom assignments will be posted closer to the competition
-date.
+For day-of logistics, including the schedule and information about check-in,
+activities, room assignments, and more, please read
+[our day-of logistics post](/news/bmt-2023-logistics)!
 
 # Frequently Asked Questions
 
